mobile menu button overflow bug fixed

--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,26 @@
 }
 
 @layer base {
+
+  #root {
+    overflow-x: hidden !important;
+    width: 100%;
+    max-width: 100vw;
+  }
+
+  .App {
+    overflow-x: hidden !important;
+    width: 100%;
+    max-width: 100vw;
+  }
+
   html {
     scroll-behavior: smooth;
     margin: 0;
     padding: 0;
+    overflow-x: hidden !important;
+    width: 100%;
+    max-width: 100vw;
   }
 
   button {
@@ -40,6 +56,9 @@
     font-family: "Inter", sans-serif;
     margin: 0;
     padding: 0;
+    overflow-x: hidden !important;
+    width: 100%;
+    max-width: 100vw;
   }
 
   .font-serif {
